Fixing text overflow and unexpected mutations

--- a/src/learn-fs-style.css
+++ b/src/learn-fs-style.css
@@ -28,7 +28,8 @@
   flex-direction: column;
   justify-content: space-between;
   height: 325px;
-  max-width: 600px;
+  max-width: 700px;
+  word-break: break-word;
 }
 
 .social-image__title {
